@@ -1,2 +1,3 @@
 other/.*
 resources/.*
+out/.*
