@@ -17,13 +17,15 @@ is.Fill(x)
 
   \item{foregroundColor}{a character vector specifiying the foreground
     color.  Any color names as returned by
-    \code{\link[grDevices]{colors}} can be used.  For Excel 95
+    \code{\link[grDevices]{colors}} can be used.   Or, a hex character,
+    e.g. "#FF0000" for red.  For Excel 95 
     workbooks, only a subset of colors is available, see the constant
     \code{INDEXED_COLORS_}.}
   
   \item{backgroundColor}{a character vector specifiying the foreground
     color.  Any color names as returned by
-    \code{\link[grDevices]{colors}} can be used.  For Excel 95
+    \code{\link[grDevices]{colors}} can be used.   Or, a hex character,
+    e.g. "#FF0000" for red.  For Excel 95
     workbooks, only a subset of colors is available, see the constant
     \code{INDEXED_COLORS_}.}
 
